Added ransack gem

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,5 +21,6 @@
     <div class="col-md-12"><p><%= post.description%></p></div>
     </div>
     <% end %>
+    <%= paginate @posts %>
 </div>
 </div>
